FireAlarmApplication.Web/mtg_debug_20260127_143521.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 14:35:21
NetCDF: C:\Users\kubil\AppData\Local\Temp\973d8fd4-5ef4-4e06-a947-80932ae3767a.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
